--- a/wwc/testing_react_components.html
+++ b/wwc/testing_react_components.html
@@ -59,7 +59,7 @@
 
 <p>The following are some of my experiences testing React components. Ready? Here we go!</p>
 
-<p><img src="http://gifs.joelglovier.com/epic/expedition.gif%20=600x" alt="EXPEDITION"></p>
+<p><img src="http://gifs.joelglovier.com/epic/expedition.gif" style="width: 600px" alt="EXPEDITION"></p>
 
 <h2>React Test Utils</h2>
 
