--- a/wwc/testing_react_components.html
+++ b/wwc/testing_react_components.html
@@ -57,7 +57,7 @@
 
 <p>One of the things I really like about React is how it lends itself to <a href="http://en.wikipedia.org/wiki/Test-driven_development">TDD</a> and testing in general. Small, focused components relying mostly on props (parameters) are easy to reason about and requires little mock.</p>
 
-<p>The following are some of my experiences testing React components. Ready? Here we go!</p>
+<p>The following are some of my experiences testing React components. Ready? Let&#39;s go!</p>
 
 <p><img src="http://gifs.joelglovier.com/epic/expedition.gif" style="width: 600px" alt="EXPEDITION"></p>
 
@@ -217,7 +217,7 @@ describe(&#39;My component&#39;, function() {
 $ npm test
 </code></pre>
 
-<p><img src="../img/nyancat.gif%20=150x" alt="NYANCAT"></p>
+<p><img src="../img/nyancat.gif" style="width: 150px" alt="NYANCAT"></p>
 
 <h2>Testling</h2>
 
@@ -241,7 +241,7 @@ $ npm test
 
 <p>Since we, in our jsdom wrapper above, only try to require jsdom if no document exists; the browser will never reach that code and we are good. The tests will use the browser&#39;s DOM. </p>
 
-<p><img src="http://gifs.joelglovier.com/fresh-prince/carlton.gif%20=300x" alt="YOU"></p>
+<p><img src="http://gifs.joelglovier.com/fresh-prince/carlton.gif" style="width: 200px" alt="YOU"></p>
 
 <p>Now go get some test coverage for your React components!</p>
 
