Working on testing

--- a/wwc/testing_react_components.html
+++ b/wwc/testing_react_components.html
@@ -59,7 +59,7 @@
 
 <p>The following are some of my experiences testing React components. Ready? Let&#39;s go!</p>
 
-<p><img src="http://gifs.joelglovier.com/epic/expedition.gif" style="width: 600px" alt="EXPEDITION"></p>
+<p><img src="http://gifs.joelglovier.com/epic/expedition.gif" style="width: 700px" alt="EXPEDITION"></p>
 
 <h2>React Test Utils</h2>
 
@@ -217,11 +217,11 @@ describe(&#39;My component&#39;, function() {
 $ npm test
 </code></pre>
 
-<p><img src="../img/nyancat.gif" style="width: 150px" alt="NYANCAT"></p>
+<p><img src="../img/nyancat.gif" style="width: 250px" alt="NYANCAT"></p>
 
 <h2>Testling</h2>
 
-<p>Running the tests in node is convenient and fast, but it is <strong>NOT THE SAME</strong> as running them in actual browser. So, we need to hook up some actual browser testing too. <a href="https://ci.testling.com/">Testling</a> is a great alternative and free for open source projects. They have great <a href="https://ci.testling.com/guide/quick_start">documentation</a> and even a special little guide for using <a href="https://ci.testling.com/guide/mocha">mocha</a>. Plus, it will get you some sweet badges like this:</p>
+<p>Running the tests in node is convenient and fast, but it is <strong>NOT THE SAME</strong> as running them in actual browser. So, we need to hook up some actual browser testing too. <a href="https://ci.testling.com/">Testling</a> is a great alternative and free for open source projects. They have great <a href="https://ci.testling.com/guide/quick_start">documentation</a> and even a special little guide for using <a href="https://ci.testling.com/guide/mocha">mocha</a>. Plus, you&#39;ll get sweet badges:</p>
 
 <p><a href="https://ci.testling.com/asbjornenge/nanoxhr"><img src="https://ci.testling.com/asbjornenge/nanoxhr.png" alt="browser support">
 </a></p>
