Prepared publish of testing react components

--- a/index.html
+++ b/index.html
@@ -55,6 +55,14 @@
 	
     <div class="previews">
 		
+    <div id="8fe01453" class="preview">
+        <div class="previewDate">19.06.2014</div>
+            <div class="previewImageBox previewLink" style="background-image:url(/img/testing-react-components.png)" link="wwc/testing_react_components.html"></div>
+        <h3 class="previewLink" link="wwc/testing_react_components.html">Testing React Components</h3>
+        <p>Sweet fast feedback loops for TDD with React.</p>
+    </div>
+
+		
     <div id="8bb8ef3f" class="preview">
         <div class="previewDate">10.06.2014</div>
             <div class="previewImageBox previewLink" style="background-image:url(/img/dock-in-the-clouds.png)" link="wwc/dock_in_the_clouds.html"></div>
