Updated testling badge

--- a/wwc/testing_react_components.html
+++ b/wwc/testing_react_components.html
@@ -223,7 +223,7 @@ $ npm test
 
 <p>Running the tests in node is convenient and fast, but it is <strong>NOT THE SAME</strong> as running them in actual browser. So, we need to hook up some actual browser testing too. <a href="https://ci.testling.com/">Testling</a> is a great alternative and free for open source projects. They have great <a href="https://ci.testling.com/guide/quick_start">documentation</a> and even a special little guide for using <a href="https://ci.testling.com/guide/mocha">mocha</a>. Plus, you&#39;ll get sweet badges:</p>
 
-<p><a href="https://ci.testling.com/asbjornenge/nanoxhr"><img src="https://ci.testling.com/asbjornenge/nanoxhr.png" alt="browser support">
+<p><a href="https://ci.testling.com/asbjornenge/nanoxhr"><img src="https://ci.testling.com/asbjornenge/nanodom.png" alt="browser support">
 </a></p>
 
 <p>There is one little trick I wanted to add though. Testling users <a href="http://browserify.org/">browserify</a> to create a browser compatible bundle of your javascripts. Unfortunately jsdom is not compatible with browserify, so we have to tell testling to ignore it.</p>
