--- a/wwc/zero_todo.html
+++ b/wwc/zero_todo.html
@@ -75,7 +75,7 @@
 smtp_sasl_mechanism_filter = plain // For Yosemite
 </code></pre>
 
-<p><em>PS!</em> See the update section at the bottom of this article</p>
+<p><strong>PS!</strong> See the update section at the bottom of this article.</p>
 
 <h2>$ mail</h2>
 
