Added gaug.es instead of ga for analytics

--- a/wwc/dock_in_the_clouds.html
+++ b/wwc/dock_in_the_clouds.html
@@ -15,7 +15,6 @@
         <link rel="stylesheet" href="/css/highlight/googlecode.css">
         <script src="/js/lib/highlight.pack.js"></script>
         -->
-        <script src="/js/lib/ga.js"></script>
         <script src="/js/lib/jquery-1.9.0.min.js"></script>
         <script src="/js/lib/tap.js"></script>
         <script src="/js/init.js" type="text/javascript"></script>
@@ -234,5 +233,19 @@ Thank you internet of folks!</p>
             <div class="push"></div>
         </div>
         <div id="footer">enjoy.</div>
+        <script type="text/javascript">
+          var _gauges = _gauges || [];
+          (function() {
+            var t   = document.createElement('script');
+            t.type  = 'text/javascript';
+            t.async = true;
+            t.id    = 'gauges-tracker';
+            t.setAttribute('data-site-id', '5570232592c6ac04d5004131');
+            t.setAttribute('data-track-path', 'https://track.gaug.es/track.gif');
+            t.src = 'https://track.gaug.es/track.js';
+            var s = document.getElementsByTagName('script')[0];
+            s.parentNode.insertBefore(t, s);
+          })();
+        </script>
     </body>
 </html>
