Fixing some broken gifs

--- a/wwc/testing_react_components.html
+++ b/wwc/testing_react_components.html
@@ -58,7 +58,7 @@
 
 <p>The following are some of my experiences testing React components. Ready? Let&#39;s go!</p>
 
-<p><img src="http://gifs.joelglovier.com/epic/expedition.gif" style="width: 710px" alt="EXPEDITION"></p>
+<p><img src="/img/expedition.gif" style="width: 710px" alt="EXPEDITION"></p>
 
 <h2>React Test Utils</h2>
 
@@ -240,7 +240,7 @@ $ npm test
 
 <p>Since we, in our jsdom wrapper above, only try to require jsdom if no document exists; the browser will never reach that code and we are good. The tests will use the browser&#39;s DOM. </p>
 
-<p><img src="http://gifs.joelglovier.com/fresh-prince/carlton.gif" style="width: 200px" alt="YOU"></p>
+<p><img src="http://i.giphy.com/5iXTLFjce2qcw.gif" style="width: 200px" alt="YOU"></p>
 
 <p>Now go get some test coverage for your React components!</p>
 
