--- a/wwc/testing_react_components.html
+++ b/wwc/testing_react_components.html
@@ -97,6 +97,9 @@ $ vi test/spec.js
 
 <p><img src="http://gifs.joelglovier.com/fail/kayak-diving.gif" alt="FAIL"></p>
 
+<p>UPDATE: I&#39;ve since changed my mind and are now using jsx. Partly because React introduce some breaking changes that would not have been a PITA if I had
+been using jsx, and partly becuse it is a nice visual separation of logic and components.</p>
+
 <h2>Include a common render function</h2>
 
 <p>For each test you want a clean slate. Usually this means rendering the component again. It makes sense wrapping the render code into a function.</p>
