--- a/wwc/json_schema.html
+++ b/wwc/json_schema.html
@@ -28,10 +28,8 @@
             <ul id="menu">
                 <li class="about nav_item" link="/about.html">About</li>
                 <li class="separator">:</li>
-                <!--
-                <li class="crly nav_item" link="/crly.html">Crly</li>
+                <li class="apps nav_item" link="/apps.html">Apps</li>
                 <li class="separator">:</li>
-                -->
                 <!--
                 <li class="software nav_item" link="/software.html">Software</li>
                 <li class="separator">:</li>
