Added eff membership image

--- a/about.html
+++ b/about.html
@@ -60,6 +60,8 @@
 
 <p>I&#39;m also an amateur coffee fanatic. My preferred brewing method is pourover by <a href="http://www.chemexcoffeemaker.com">Chemex</a>. I prefer washed, light and floral african beans. I get my coffee from a number of places including <a href="http://www.coffeeberry.no">Coffeeberry</a>, <a href="http://timwendelboe.no">Tim Wendelboe</a>, <a href="http://www.kaffa.no">Kaffa</a> and <a href="http://shop.squaremilecoffee.com">Square Mile Coffee</a>.</p>
 
+<p><a href="https://www.eff.org/"><img src="https://www.eff.org/files/2015/12/22/2016-member-badge-circle4.png" alt="eff"></a></p>
+
             <div class="push"></div>
         </div>
         <div id="footer">enjoy.</div>
